# Argonath

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/argonath/: __init__.py  app.py  attributes.py
